# specfit

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  encorr_functions.py  flux_functions.py  generate_specfit_htmldoc.C  load_specfit_cpplib.C  makefile  specfit.mk  specfit.py  specfit_cpplib.py  specfit_env.sh
data/: more_simulations.h5  simulated_cr_flux_01.txt  simulated_cr_flux_02.txt  simulated_cr_flux_03.txt
inc/: TBPLF1.h  TCRFlux.h  TCRFluxFit.h  TSPECFITF1.h  specfit.h  specfitLinkDef.h  specfit_canv.h  specfit_uti.h
lib/: .gitignore
sim/hdf5/: sim_fluxes.h5
sim/txt/: crf_14.txt  crf_15.txt  crf_16.txt  crf_17.txt  crf_18.txt  crf_19.txt  crf_20.txt
src/: TBPLF1.cxx  TCRFlux.cxx  TCRFluxFit.cxx  TSPECFITF1.cxx  specfit_canv.cxx  specfit_uti.cxx
